# quickHull

./: CMakeLists.txt  Edge.cpp  Edge.h  NormalFormLine.cpp  NormalFormLine.h  Point.cpp  Point.h  main.cpp  quickHull.cpp  quickHull.h  randomizePoints.cpp  randomizePoints.h  readPoints.cpp  readPoints.h
